<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_5sdp"
    android:layout_height="wrap_content"
    android:padding="@dimen/_5sdp"
    android:orientation="vertical"
    android:background="@drawable/rectangle_stroke">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lnr_plot_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_p_no"
                style="@style/text_names_left"
                android:text="@string/plot_no"
                />
            <TextView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_14sdp"
                android:text=":"
                android:gravity="center"

                />
            <TextView
                android:id="@+id/txt_plot_no"
                style="@style/text_names_values" android:text="102"
                 />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView style="@style/text_names_left"
                android:text="@string/plot_facing"
                android:id="@+id/txt_p_facing"
                />
            <TextView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_14sdp"
                android:text=":"
                android:gravity="center"

                />
            <TextView
                android:id="@+id/txt_plot_facing"
                style="@style/text_names_values" android:text="East"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView style="@style/text_names_left"
                android:text="@string/plot_flat_uds"
                android:id="@+id/txt_p_uds"
                />
            <TextView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_14sdp"
                android:text=":"
                android:gravity="center"

                />
            <TextView
                android:id="@+id/txt_uds"
                style="@style/text_names_values" android:text="123"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView style="@style/text_names_left"
                android:text="@string/plot_flat_area"
                android:id="@+id/txt_p_area"
                />
            <TextView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_14sdp"
                android:text=":"
                android:gravity="center"

                />
            <TextView
                android:id="@+id/txt_plot_flat_area"
                style="@style/text_names_values" android:text="1234"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView style="@style/text_names_left"
                android:text="@string/plot_status"
                android:id="@+id/txt_p_status"
                />
            <TextView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_14sdp"
                android:text=":"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/txt_plot_status"
                style="@style/text_names_values" android:text="@string/availbelable"
                android:textColor="#FF9800"
                 />
        </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:id="@+id/lnr_enquiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/green"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_enquiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:minWidth="@dimen/_100sdp"
                    android:fontFamily="sans-serif"
                    android:text="@string/enquiery_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:gravity="center"
                    android:textStyle="bold" />


            </LinearLayout>

    </LinearLayout>

</LinearLayout>